# cpp-3d-zelenka

./: README.md
cpp-3d-zelenka/: CMakeLists.txt  scene_cat.xml  scene_plane.xml
cpp-3d-zelenka/Data/Cats/: barsik_1.3ds  barsik_2.3ds
cpp-3d-zelenka/Data/SimpleModel/: box.agso  cone.agso  cylinder.agso  dodecahedron.agso  icosahedron.agso  octahedron.agso  plane.agso  sphere.agso  tetrahederon.agso  torus.agso
cpp-3d-zelenka/Shaders/: _basic.fsh  _basic.vsh  _depth.fsh  _depth.vsh
cpp-3d-zelenka/src/: base_camera.cpp  base_model.h  buffers.h  frame_buffer_image.cpp  gl_extentions.h  imodel.h  itransform.h  light.cpp  light.h  main.cpp  model_assimp.h  model_simple.cpp  orbit_camera.cpp  orbit_camera.h  scene3d.cpp  scene3d.h  texture.h
cpp-3d-zelenka/src/GUI/: Qt_scene3d.cpp  Qt_scene3d.h  main_window.cpp  main_window.h
cpp-3d-zelenka/src/base/: gl_extentions.cpp  gl_extentions.h  imodel.h  itransform.h  object_type.cpp  object_type.h
cpp-3d-zelenka/src/buffers/: buffers.h  frame_buffer.cpp  frame_buffer.h  frame_buffer_image.cpp  frame_buffer_image.h
cpp-3d-zelenka/src/camera/: base_camera.h  camera.cpp  camera.h  orbit_camera.h
cpp-3d-zelenka/src/light/: light.cpp  light.h
cpp-3d-zelenka/src/math/: base.h  matrix3x3.h  matrix3x3.inl  matrix4x4.h  matrix4x4.inl  other_vectors.h  vector3.h  vector3.inl
cpp-3d-zelenka/src/model/: base_model.cpp  base_model.h  material.cpp  material.h  mesh.cpp  mesh.h  model_assimp.cpp  model_assimp.h  model_simple.h  texture.cpp  texture.h
cpp-3d-zelenka/src/shader/: shader.cpp  shader.h
